🔒 Fix Firewall Configuration Issues
✅ Problem Fixed:
- deploy.sh script was automatically configuring firewall without permission
- This could conflict with existing iptables configurations
- Made firewall configuration OPTIONAL by default

✅ Changes Made:
- Firewall configuration now requires CONFIGURE_FIREWALL=true
- Added warning messages about potential conflicts
- Default behavior: skip firewall configuration

✅ New Scripts Added:
- restore-iptables.sh: Restore iptables service if lost
- check-firewall.sh: Check firewall status and conflicts

✅ Environment Variables:
- CONFIGURE_FIREWALL=false (default in .env.production)
- Set to true only if you want automatic firewall config

✅ Usage:
- Standard deploy: sudo ./deploy.sh (no firewall changes)
- With firewall: sudo CONFIGURE_FIREWALL=true ./deploy.sh
- Restore iptables: sudo ./restore-iptables.sh
- Check status: sudo ./check-firewall.sh

✅ Documentation:
- Updated PRODUCTION.md with firewall management section
- Added troubleshooting for firewall conflicts
- Clear warnings about potential iptables conflicts

This ensures deploy.sh won't break existing iptables configurations.

--- a/.env.production
+++ b/.env.production
@@ -18,6 +18,9 @@ AUTO_INSTALL=true            # Enable auto-install for production
 ENABLE_HTTPS=true
 ENABLE_FAIL2BAN=true
 
+# Firewall Configuration
+CONFIGURE_FIREWALL=false  # Set to true to auto-configure firewall (may conflict with existing iptables)
+
 # Database Configuration (Internal PostgreSQL)
 DB_HOST=localhost
 DB_PORT=5432
