🔄 Sync Production Network Mode with Development
✅ Changes Made:
- Changed production from host network to bridge network mode
- Synchronized with development environment configuration
- Avoids port conflicts with existing host services

✅ Network Configuration:
- HTTP: 8080 → 80 (instead of direct port 80)
- HTTPS: 8443 → 443 (instead of direct port 443)
- SIP: 5060 → 5060 (same as before)
- Event Socket: 8021 → 8021 (same as before)
- RTP: 10000-10100 → 10000-10100 (same as before)

✅ Benefits:
- No conflicts with existing services on ports 80/443
- Consistent with development environment
- Easier to manage alongside other services
- Still maintains SIP/RTP performance

✅ Updated Files:
- docker-compose.yml: Changed to bridge network with port mapping
- deploy.sh: Updated firewall rules and status display
- .env.production: Updated network configuration comments
- PRODUCTION.md: Updated documentation

✅ Firewall Ports:
- 8080/tcp (HTTP)
- 8443/tcp (HTTPS)
- 5060/tcp+udp (SIP)
- 5080/tcp+udp (SIP Alt)
- 8021/tcp (Event Socket)
- 10000-10100/udp (RTP)

Production and development environments now use identical network configuration.

--- a/.env.production
+++ b/.env.production
@@ -36,14 +36,14 @@ ENVIRONMENT=production
 LOG_LEVEL=info
 DEBUG_MODE=false
 
-# Network Configuration (Host Network Mode)
-# Note: Host network mode is used for better SIP/RTP performance
-# All services will be accessible directly on host ports:
-# - HTTP: port 80
-# - HTTPS: port 443  
-# - SIP: port 5060
-# - FreeSWITCH Event Socket: port 8021
-# - RTP: ports 10000-10100
+# Network Configuration (Bridge Network Mode)
+# Note: Bridge network mode for compatibility with existing services
+# Port mapping to avoid conflicts:
+# - HTTP: 8080 → 80
+# - HTTPS: 8443 → 443
+# - SIP: 5060 → 5060
+# - FreeSWITCH Event Socket: 8021 → 8021
+# - RTP: 10000-10100 → 10000-10100
 
 # Backup Configuration
 BACKUP_ENABLED=true
