--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,7 @@
-# FusionPBX Production Environment Configuration
+# FusionPBX Environment Configuration
 # Author: Finstar Team
 # Version: 1.0
+# Copy this file to .env and customize as needed
 
 # Docker Image Configuration
 FUSIONPBX_IMAGE=skytruongdev/fusionpbx:latest
@@ -11,8 +12,8 @@ FUSIONPBX_ADMIN_USER=admin
 FUSIONPBX_ADMIN_PASSWORD=Finstar@2025
 
 # Installation Mode
-FUSIONPBX_SETUP_WIZARD=false  # Disable setup wizard for production
-AUTO_INSTALL=true            # Enable auto-install for production
+FUSIONPBX_SETUP_WIZARD=false  # Disable setup wizard for auto-install
+AUTO_INSTALL=true            # Enable auto-install mode
 
 # Security Configuration
 ENABLE_HTTPS=true
@@ -28,10 +29,13 @@ DB_NAME=fusionpbx
 DB_USER=fusionpbx
 DB_PASSWORD=fusionpbx
 
+# FreeSWITCH Configuration
+FREESWITCH_PASSWORD=Finstar@FS2025
+
 # Timezone
 TZ=Asia/Ho_Chi_Minh
 
-# Production Specific Settings
+# Environment Settings
 ENVIRONMENT=production
 LOG_LEVEL=info
 DEBUG_MODE=false
@@ -53,3 +57,13 @@ BACKUP_SCHEDULE="0 2 * * *"  # Daily at 2 AM
 # Monitoring
 MONITORING_ENABLED=true
 HEALTH_CHECK_INTERVAL=30s
+
+# Development Override (uncomment for development)
+# FUSIONPBX_DOMAIN=localhost
+# FUSIONPBX_ADMIN_USER=finstar_admin
+# DB_NAME=finstar_pbx
+# DB_USER=finstar_user
+# DB_PASSWORD=Finstar@DB2025
+# ENVIRONMENT=development
+# DEBUG_MODE=true
+# ENABLE_FAIL2BAN=false
